[tool.poetry]
name = "bombcrypto-bot"
version = "0.1.0"
description = ""
authors = ["mpcabete <https://github.com/mpcabete/bombcrypto-bot>"]

[tool.poetry.dependencies]
python = "^3.10"
MouseInfo = "^0.1.3"
mss = "^6.1.0"
numpy = "^1.22.0"
opencv-python = "^4.5.5"
PyAutoGUI = "^0.9.53"
PyGetWindow = "^0.0.9"
PyMsgBox = "^1.0.9"
pyperclip = "^1.8.2"
PyRect = "^0.1.4"
PyScreeze = "^0.1.28"
pytweening = "^1.0.4"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
